--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Be My Valentine 💘</title>
+  <title>Buon san valentino 💘</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
@@ -167,19 +167,19 @@
 </head>
 
 <body>
-
+  <img src="quackandlolasleeping.webp" \>
   <div class="card">
-    <div class="emoji">🐱❤️</div>
-    <h2>Aditi,<br>will you be my Valentine?</h2>
+    <div class="emoji">🦔❤️</div>
+    <h2>🦔Riccia,<br> vuoi essere la mia Lola?</h2>
 
     <div class="buttons">
-      <button id="yes">Yes 💖</button>
-      <button id="no">No 🙈</button>
+      <button id="yes">Sì 💖</button>
+      <button id="no">No 😣</button>
     </div>
 
-    <div class="hint">Some love stories don’t allow “no” ✨</div>
+    <div class="hint">Indizio: Non sono una persona da “no” ✨</div>
   </div>
-
+    <img src="quackandlola.webp" >
   <!-- Sounds -->
   <audio id="hoverSound" src="https://assets.mixkit.co/sfx/preview/mixkit-cartoon-voice-laugh-343.mp3"></audio>
   <audio id="yesSound" src="https://assets.mixkit.co/sfx/preview/mixkit-achievement-bell-600.mp3"></audio>
@@ -207,7 +207,7 @@
 
     yesBtn.addEventListener("click", () => {
       yesSound.play();
-
+      
       confetti({
         particleCount: 260,
         spread: 120,
@@ -215,7 +215,7 @@
       });
 
       setTimeout(() => {
-        alert("YAY 💕 I can’t wait for Valentine’s Day with you!");
+        alert("Perfetto! Adesso possiamo darci un bacio eschimese!");
       }, 500);
     });
 
