--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Buon san valentino 💘</title>
+  <title>Buon San Valentino 💘</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
@@ -21,13 +21,14 @@
     body {
       min-height: 100vh;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #fbc2eb, #a18cd1);
       background-size: 400% 400%;
       animation: bgMove 12s ease infinite;
       font-family: "Poppins", sans-serif;
-      overflow: hidden;
+      overflow-x: hidden;
     }
 
     @keyframes bgMove {
@@ -36,7 +37,6 @@
       100% { background-position: 0% 50%; }
     }
 
-    /* Card */
     .card {
       width: min(92%, 420px);
       padding: 40px 30px 45px;
@@ -44,11 +44,10 @@
       backdrop-filter: blur(18px);
       border-radius: 28px;
       text-align: center;
-      box-shadow:
-        0 30px 80px rgba(0,0,0,0.25),
-        inset 0 0 0 1px rgba(255,255,255,0.4);
+      box-shadow: 0 30px 80px rgba(0,0,0,0.25), inset 0 0 0 1px rgba(255,255,255,0.4);
       position: relative;
       animation: cardIn 1.1s ease;
+      margin: 20px 0;
     }
 
     @keyframes cardIn {
@@ -56,7 +55,6 @@
       to { opacity: 1; transform: translateY(0) scale(1); }
     }
 
-    /* Glow ring */
     .card::before {
       content: "";
       position: absolute;
@@ -135,7 +133,6 @@
       font-style: italic;
     }
 
-    /* Floating depth hearts */
     .heart {
       position: absolute;
       bottom: -20px;
@@ -145,51 +142,50 @@
     }
 
     @keyframes floatUp {
-      from {
-        transform: translateY(0) scale(1);
-        opacity: 1;
-      }
-      to {
-        transform: translateY(-120vh) scale(1.8);
-        opacity: 0;
-      }
+      from { transform: translateY(0) scale(1); opacity: 1; }
+      to { transform: translateY(-120vh) scale(1.8); opacity: 0; }
     }
 
-    /* Responsive */
+    /* Responsive immagini */
+    img.responsive {
+      display: block;
+      max-width: 90%;
+      height: auto;
+      margin: 15px auto;
+    }
+
     @media (max-width: 480px) {
       h2 { font-size: 23px; }
       .emoji { font-size: 58px; }
       button { padding: 12px 28px; font-size: 15px; }
       #yes { left: 8%; }
       #no { left: 55%; }
-      img.responsive {
-  display: block;
-  max-width: 90%;
-  height: auto;
-  margin: 15px auto;
-}
-
     }
   </style>
 </head>
 
 <body>
-  <div class="div">
+
+  <!-- Immagini iniziali -->
   <img src="quackandlolasleeping.webp" class="responsive">
+  
+  <!-- Card centrale -->
+  <div class="card">
+    <div class="emoji">🦔❤️</div>
+    <h2>🦔Riccia,<br> vuoi essere la mia Lola?</h2>
+    <div class="buttons">
+      <button id="yes">Sì 💖</button>
+      <button id="no">No 😣</button>
+    </div>
+    <div class="hint">Indizio: Non sono una persona da “no” ✨</div>
   </div>
-<div class="card">
-  <div class="emoji">🦔❤️</div>
-  <h2>🦔Riccia,<br> vuoi essere la mia Lola?</h2>
-  <div class="buttons">
-    <button id="yes">Sì 💖</button>
-    <button id="no">No 😣</button>
-  </div>
-  <div class="hint">Indizio: Non sono una persona da “no” ✨</div>
-</div>
-<div class="div">
-<img src="quackandlola.webp" class="responsive">
-</div>
-  <!-- Sounds -->
+  
+  <!-- Immagine finale -->
+  <img src="quackandlola.webp" class="responsive">
+  <!-- Sticker GIF nascosto inizialmente -->
+  <img id="sticker" src="quackkissing.webp" class="responsive" style="display:none;">
+
+  <!-- Suoni -->
   <audio id="hoverSound" src="https://assets.mixkit.co/sfx/preview/mixkit-cartoon-voice-laugh-343.mp3"></audio>
   <audio id="yesSound" src="https://assets.mixkit.co/sfx/preview/mixkit-achievement-bell-600.mp3"></audio>
 
@@ -199,35 +195,40 @@
     const card = document.querySelector(".card");
     const hoverSound = document.getElementById("hoverSound");
     const yesSound = document.getElementById("yesSound");
+    const sticker = document.getElementById("sticker");
 
+    // Bottone NO che scappa
     noBtn.addEventListener("mouseenter", () => {
       hoverSound.currentTime = 0;
       hoverSound.play();
-
       const cardRect = card.getBoundingClientRect();
       const btnRect = noBtn.getBoundingClientRect();
-
       const maxX = cardRect.width - btnRect.width - 10;
       const maxY = cardRect.height - btnRect.height - 10;
-
       noBtn.style.left = Math.random() * maxX + "px";
       noBtn.style.top = Math.random() * maxY + "px";
     });
 
+    // Bottone SÌ
     yesBtn.addEventListener("click", () => {
       yesSound.play();
       
+      // Confetti
       confetti({
         particleCount: 260,
         spread: 120,
         origin: { y: 0.65 }
       });
 
+      // Mostra sticker GIF
+      sticker.style.display = "block";
+
       setTimeout(() => {
         alert("Perfetto! Adesso possiamo darci un bacio eschimese!");
       }, 500);
     });
 
+    // Cuori flottanti
     function createHeart() {
       const heart = document.createElement("div");
       heart.className = "heart";
@@ -236,7 +237,6 @@
       heart.style.fontSize = Math.random() * 22 + 14 + "px";
       heart.style.animationDuration = Math.random() * 3 + 4 + "s";
       heart.style.opacity = Math.random() * 0.5 + 0.4;
-
       document.body.appendChild(heart);
       setTimeout(() => heart.remove(), 8000);
     }
