--- a/index.html
+++ b/index.html
@@ -1,174 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Buon San Valentino 💘</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Buon San Valentino 💘</title>
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
-  <!-- Confetti -->
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+<!-- Confetti -->
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+<style>
+  * { box-sizing: border-box; margin: 0; padding: 0; }
 
-    body {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #fbc2eb, #a18cd1);
-      background-size: 400% 400%;
-      animation: bgMove 12s ease infinite;
-      font-family: "Poppins", sans-serif;
-      overflow-x: hidden;
-    }
+  body {
+    font-family: "Poppins", sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #fbc2eb, #a18cd1);
+    background-size: 400% 400%;
+    animation: bgMove 12s ease infinite;
+    overflow-x: hidden;
+    padding: 10px;
+  }
 
-    @keyframes bgMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
+  @keyframes bgMove {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+  }
 
-    .card {
-      width: min(92%, 420px);
-      padding: 40px 30px 45px;
-      background: rgba(255, 255, 255, 0.75);
-      backdrop-filter: blur(18px);
-      border-radius: 28px;
-      text-align: center;
-      box-shadow: 0 30px 80px rgba(0,0,0,0.25), inset 0 0 0 1px rgba(255,255,255,0.4);
-      position: relative;
-      animation: cardIn 1.1s ease;
-      margin: 20px 0;
-    }
+  img.responsive {
+    display: block;
+    width: 90%;
+    max-width: 400px;
+    height: auto;
+    margin: 15px auto;
+    border-radius: 20px;
+  }
 
-    @keyframes cardIn {
-      from { opacity: 0; transform: translateY(30px) scale(0.95); }
-      to { opacity: 1; transform: translateY(0) scale(1); }
-    }
+  .card {
+    width: 95%;
+    max-width: 420px;
+    padding: 25px 20px;
+    background: rgba(255,255,255,0.75);
+    backdrop-filter: blur(18px);
+    border-radius: 25px;
+    text-align: center;
+    position: relative;
+    box-shadow: 0 20px 50px rgba(0,0,0,0.25), inset 0 0 0 1px rgba(255,255,255,0.4);
+  }
 
-    .card::before {
-      content: "";
-      position: absolute;
-      inset: -2px;
-      border-radius: 30px;
-      background: linear-gradient(120deg, #ff4d6d, #ff9a9e, #fbc2eb);
-      z-index: -1;
-      filter: blur(20px);
-      opacity: 0.7;
-    }
+  .card::before {
+    content: "";
+    position: absolute;
+    inset: -2px;
+    border-radius: 25px;
+    background: linear-gradient(120deg, #ff4d6d, #ff9a9e, #fbc2eb);
+    z-index: -1;
+    filter: blur(20px);
+    opacity: 0.7;
+  }
 
-    .emoji {
-      font-size: 68px;
-      margin-bottom: 12px;
-      animation: heartbeat 1.8s infinite;
-    }
+  .emoji {
+    font-size: 55px;
+    margin-bottom: 10px;
+    animation: heartbeat 1.8s infinite;
+  }
 
-    @keyframes heartbeat {
-      0%,100% { transform: scale(1); }
-      25% { transform: scale(1.08); }
-      50% { transform: scale(1); }
-      75% { transform: scale(1.12); }
-    }
+  @keyframes heartbeat {
+    0%,100% { transform: scale(1); }
+    25% { transform: scale(1.08); }
+    50% { transform: scale(1); }
+    75% { transform: scale(1.12); }
+  }
 
-    h2 {
-      font-family: "Playfair Display", serif;
-      font-size: 28px;
-      color: #4a1c2f;
-      margin-bottom: 30px;
-      line-height: 1.35;
-    }
+  h2 {
+    font-family: "Playfair Display", serif;
+    font-size: 22px;
+    color: #4a1c2f;
+    line-height: 1.3;
+    margin-bottom: 20px;
+  }
 
-    .buttons {
-      position: relative;
-      height: 78px;
-    }
+  .buttons {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 15px;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
 
-    button {
-      position: absolute;
-      padding: 14px 36px;
-      border-radius: 40px;
-      border: none;
-      font-size: 16px;
-      font-weight: 500;
-      cursor: pointer;
-      transition: all 0.25s ease;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-    }
+  button {
+    padding: 12px 25px;
+    border-radius: 40px;
+    border: none;
+    font-size: 15px;
+    font-weight: 500;
+    cursor: pointer;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+    transition: all 0.2s ease;
+    flex: 1 1 40%;
+    min-width: 100px;
+  }
 
-    button:active {
-      transform: scale(0.94);
-    }
+  button:active { transform: scale(0.94); }
 
-    #yes {
-      left: 12%;
-      background: linear-gradient(135deg, #ff4d6d, #ff758f);
-      color: #fff;
-      box-shadow: 0 15px 35px rgba(255,77,109,0.55);
-    }
+  #yes {
+    background: linear-gradient(135deg, #ff4d6d, #ff758f);
+    color: #fff;
+    box-shadow: 0 12px 30px rgba(255,77,109,0.55);
+  }
 
-    #yes:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 20px 40px rgba(255,77,109,0.7);
-    }
+  #no {
+    background: rgba(255,255,255,0.9);
+    color: #777;
+  }
 
-    #no {
-      left: 55%;
-      background: rgba(255,255,255,0.9);
-      color: #777;
-    }
+  .hint { margin-top: 15px; font-size: 12px; color: #6b6b6b; font-style: italic; }
 
-    .hint {
-      margin-top: 28px;
-      font-size: 13px;
-      color: #6b6b6b;
-      font-style: italic;
-    }
+  .heart {
+    position: absolute;
+    bottom: -20px;
+    animation: floatUp linear forwards;
+    pointer-events: none;
+    filter: blur(0.3px);
+  }
 
-    .heart {
-      position: absolute;
-      bottom: -20px;
-      animation: floatUp linear forwards;
-      pointer-events: none;
-      filter: blur(0.3px);
-    }
+  @keyframes floatUp {
+    from { transform: translateY(0) scale(1); opacity: 1; }
+    to { transform: translateY(-120vh) scale(1.8); opacity: 0; }
+  }
 
-    @keyframes floatUp {
-      from { transform: translateY(0) scale(1); opacity: 1; }
-      to { transform: translateY(-120vh) scale(1.8); opacity: 0; }
-    }
-
-    /* Responsive immagini */
-    img.responsive {
-      display: block;
-      max-width: 90%;
-      height: auto;
-      margin: 15px auto;
-    }
-
-    @media (max-width: 480px) {
-      h2 { font-size: 23px; }
-      .emoji { font-size: 58px; }
-      button { padding: 12px 28px; font-size: 15px; }
-      #yes { left: 8%; }
-      #no { left: 55%; }
-    }
-  </style>
+  /* Sticker GIF centrato */
+  #sticker {
+    display: none;
+    width: 80%;
+    max-width: 300px;
+    margin: 15px auto;
+    border-radius: 20px;
+  }
+</style>
 </head>
 
 <body>
 
   <!-- Immagini iniziali -->
   <img src="quackandlolasleeping.webp" class="responsive">
-  
+
   <!-- Card centrale -->
   <div class="card">
     <div class="emoji">🦔❤️</div>
@@ -179,11 +162,12 @@
     </div>
     <div class="hint">Indizio: Non sono una persona da “no” ✨</div>
   </div>
-  
+
   <!-- Immagine finale -->
   <img src="quackandlola.webp" class="responsive">
-  <!-- Sticker GIF nascosto inizialmente -->
-  <img id="sticker" src="quackkissing.webp" class="responsive" style="display:none;">
+
+  <!-- Sticker GIF -->
+  <img id="sticker" src="quackkissing.webp">
 
   <!-- Suoni -->
   <audio id="hoverSound" src="https://assets.mixkit.co/sfx/preview/mixkit-cartoon-voice-laugh-343.mp3"></audio>
@@ -197,7 +181,6 @@
     const yesSound = document.getElementById("yesSound");
     const sticker = document.getElementById("sticker");
 
-    // Bottone NO che scappa
     noBtn.addEventListener("mouseenter", () => {
       hoverSound.currentTime = 0;
       hoverSound.play();
@@ -209,26 +192,16 @@
       noBtn.style.top = Math.random() * maxY + "px";
     });
 
-    // Bottone SÌ
     yesBtn.addEventListener("click", () => {
       yesSound.play();
-      
-      // Confetti
-      confetti({
-        particleCount: 260,
-        spread: 120,
-        origin: { y: 0.65 }
-      });
-
-      // Mostra sticker GIF
+      confetti({ particleCount: 260, spread: 120, origin: { y: 0.65 }});
       sticker.style.display = "block";
-
-      setTimeout(() => {
-        alert("Perfetto! Adesso possiamo darci un bacio eschimese!");
-      }, 500);
+      sticker.style.opacity = 0;
+      sticker.style.transition = "opacity 0.7s ease";
+      setTimeout(() => sticker.style.opacity = 1, 50);
+      setTimeout(() => alert("Perfetto! Adesso possiamo darci un bacio eschimese!"), 500);
     });
 
-    // Cuori flottanti
     function createHeart() {
       const heart = document.createElement("div");
       heart.className = "heart";
