--- a/index.html
+++ b/index.html
@@ -136,13 +136,28 @@
     to { transform: translateY(-120vh) scale(1.8); opacity: 0; }
   }
 
-  /* Sticker GIF centrato */
-  #sticker {
-    display: none;
-    width: 80%;
-    max-width: 300px;
-    margin: 15px auto;
+  /* Custom Alert */
+  #customAlert {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(255,255,255,0.95);
+    backdrop-filter: blur(15px);
+    padding: 20px;
     border-radius: 20px;
+    text-align: center;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+    display: none;
+    z-index: 9999;
+  }
+
+  #customAlert img {
+    width: 90%;
+    max-width: 250px;
+    height: auto;
+    border-radius: 15px;
+    margin-top: 10px;
   }
 </style>
 </head>
@@ -166,56 +181,80 @@
   <!-- Immagine finale -->
   <img src="quackandlola.webp" class="responsive">
 
-  <!-- Sticker GIF -->
-  <img id="sticker" src="quackkissing.webp">
+  <!-- Custom alert -->
+  <div id="customAlert">
+    <p>Perfetto! Adesso possiamo darci un bacio eschimese!</p>
+    <img src="quackkissing.webp">
+  </div>
 
   <!-- Suoni -->
   <audio id="hoverSound" src="https://assets.mixkit.co/sfx/preview/mixkit-cartoon-voice-laugh-343.mp3"></audio>
   <audio id="yesSound" src="https://assets.mixkit.co/sfx/preview/mixkit-achievement-bell-600.mp3"></audio>
 
-  <script>
-    const noBtn = document.getElementById("no");
-    const yesBtn = document.getElementById("yes");
-    const card = document.querySelector(".card");
-    const hoverSound = document.getElementById("hoverSound");
-    const yesSound = document.getElementById("yesSound");
-    const sticker = document.getElementById("sticker");
+<script>
+const noBtn = document.getElementById("no");
+const yesBtn = document.getElementById("yes");
+const card = document.querySelector(".card");
+const hoverSound = document.getElementById("hoverSound");
+const yesSound = document.getElementById("yesSound");
+const customAlert = document.getElementById("customAlert");
 
-    noBtn.addEventListener("mouseenter", () => {
-      hoverSound.currentTime = 0;
-      hoverSound.play();
-      const cardRect = card.getBoundingClientRect();
-      const btnRect = noBtn.getBoundingClientRect();
-      const maxX = cardRect.width - btnRect.width - 10;
-      const maxY = cardRect.height - btnRect.height - 10;
-      noBtn.style.left = Math.random() * maxX + "px";
-      noBtn.style.top = Math.random() * maxY + "px";
-    });
+// Array sticker fluttuanti
+const stickers = [
+  "shooting.webp",
+  "running.webp"
+];
 
-    yesBtn.addEventListener("click", () => {
-      yesSound.play();
-      confetti({ particleCount: 260, spread: 120, origin: { y: 0.65 }});
-      sticker.style.display = "block";
-      sticker.style.opacity = 0;
-      sticker.style.transition = "opacity 0.7s ease";
-      setTimeout(() => sticker.style.opacity = 1, 50);
-      setTimeout(() => alert("Perfetto! Adesso possiamo darci un bacio eschimese!"), 500);
-    });
+// No button effetto
+noBtn.addEventListener("mouseenter", () => {
+  hoverSound.currentTime = 0;
+  hoverSound.play();
+  const cardRect = card.getBoundingClientRect();
+  const btnRect = noBtn.getBoundingClientRect();
+  const maxX = cardRect.width - btnRect.width - 10;
+  const maxY = cardRect.height - btnRect.height - 10;
+  noBtn.style.left = Math.random() * maxX + "px";
+  noBtn.style.top = Math.random() * maxY + "px";
+});
 
-    function createHeart() {
-      const heart = document.createElement("div");
-      heart.className = "heart";
-      heart.innerHTML = Math.random() > 0.5 ? "❤️" : "💗";
-      heart.style.left = Math.random() * 100 + "vw";
-      heart.style.fontSize = Math.random() * 22 + 14 + "px";
-      heart.style.animationDuration = Math.random() * 3 + 4 + "s";
-      heart.style.opacity = Math.random() * 0.5 + 0.4;
-      document.body.appendChild(heart);
-      setTimeout(() => heart.remove(), 8000);
-    }
+// Yes button effetto
+yesBtn.addEventListener("click", () => {
+  yesSound.play();
+  confetti({ particleCount: 260, spread: 120, origin: { y: 0.65 }});
 
-    setInterval(createHeart, 380);
-  </script>
+  // Mostra custom alert per 2 secondi
+  customAlert.style.display = "block";
+  customAlert.style.opacity = 0;
+  customAlert.style.transition = "opacity 0.3s ease";
+  setTimeout(() => customAlert.style.opacity = 1, 50);
+
+  setTimeout(() => {
+    customAlert.style.opacity = 0;
+    setTimeout(() => customAlert.style.display = "none", 300);
+  }, 2000);
+});
+
+// Funzione sticker fluttuanti
+function createSticker() {
+  const sticker = document.createElement("div");
+  sticker.className = "heart";
+  const img = document.createElement("img");
+  img.src = stickers[Math.floor(Math.random() * stickers.length)];
+  img.style.width = Math.random() * 40 + 30 + "px"; // 30-70px
+  img.style.height = "auto";
+  sticker.appendChild(img);
+
+  sticker.style.left = Math.random() * 100 + "vw";
+  sticker.style.animationDuration = Math.random() * 3 + 4 + "s"; // 4-7s
+  sticker.style.opacity = Math.random() * 0.5 + 0.5;
+
+  document.body.appendChild(sticker);
+  setTimeout(() => sticker.remove(), 8000);
+}
+
+// Lancia uno sticker ogni 400ms
+setInterval(createSticker, 400);
+</script>
 
 </body>
 </html>
