--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Buon San Valentino 💘</title>
 
-<!-- Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
-
-<!-- Confetti -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 <style>
@@ -24,7 +21,7 @@
     background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #fbc2eb, #a18cd1);
     background-size: 400% 400%;
     animation: bgMove 12s ease infinite;
-    overflow-x: hidden;
+    overflow: hidden; /* Evita scroll durante il movimento del tasto */
     padding: 10px;
   }
 
@@ -46,24 +43,14 @@
   .card {
     width: 95%;
     max-width: 420px;
+    min-height: 300px; /* Altezza minima per dare spazio al tasto di scappare */
     padding: 25px 20px;
     background: rgba(255,255,255,0.75);
     backdrop-filter: blur(18px);
     border-radius: 25px;
     text-align: center;
-    position: relative;
-    box-shadow: 0 20px 50px rgba(0,0,0,0.25), inset 0 0 0 1px rgba(255,255,255,0.4);
-  }
-
-  .card::before {
-    content: "";
-    position: absolute;
-    inset: -2px;
-    border-radius: 25px;
-    background: linear-gradient(120deg, #ff4d6d, #ff9a9e, #fbc2eb);
-    z-index: -1;
-    filter: blur(20px);
-    opacity: 0.7;
+    position: relative; /* Necessario per contenere il tasto No absolute */
+    box-shadow: 0 20px 50px rgba(0,0,0,0.25);
   }
 
   .emoji {
@@ -74,25 +61,23 @@
 
   @keyframes heartbeat {
     0%,100% { transform: scale(1); }
-    25% { transform: scale(1.08); }
-    50% { transform: scale(1); }
-    75% { transform: scale(1.12); }
+    50% { transform: scale(1.1); }
   }
 
   h2 {
     font-family: "Playfair Display", serif;
     font-size: 22px;
     color: #4a1c2f;
-    line-height: 1.3;
     margin-bottom: 20px;
   }
 
   .buttons {
     display: flex;
-    justify-content: space-around;
-    margin-top: 15px;
-    flex-wrap: wrap;
-    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    gap: 20px;
+    height: 60px; /* Spazio riservato ai bottoni */
   }
 
   button {
@@ -102,94 +87,78 @@
     font-size: 15px;
     font-weight: 500;
     cursor: pointer;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-    transition: all 0.2s ease;
-    flex: 1 1 40%;
-    min-width: 100px;
+    transition: transform 0.2s ease;
   }
-
-  button:active { transform: scale(0.94); }
 
   #yes {
     background: linear-gradient(135deg, #ff4d6d, #ff758f);
     color: #fff;
-    box-shadow: 0 12px 30px rgba(255,77,109,0.55);
+    box-shadow: 0 8px 20px rgba(255,77,109,0.4);
+    z-index: 5;
   }
 
   #no {
     background: rgba(255,255,255,0.9);
     color: #777;
+    /* Rimosso flex:1 per evitare che occupi spazio fisso una volta mosso */
+    transition: left 0.2s ease, top 0.2s ease; 
   }
 
-  .hint { margin-top: 15px; font-size: 12px; color: #6b6b6b; font-style: italic; }
+  .hint { margin-top: 20px; font-size: 12px; color: #6b6b6b; font-style: italic; }
 
   .heart {
     position: absolute;
     bottom: -20px;
     animation: floatUp linear forwards;
     pointer-events: none;
-    filter: blur(0.3px);
   }
 
   @keyframes floatUp {
-    from { transform: translateY(0) scale(1); opacity: 1; }
-    to { transform: translateY(-120vh) scale(1.8); opacity: 0; }
+    from { transform: translateY(0); opacity: 1; }
+    to { transform: translateY(-120vh); opacity: 0; }
   }
 
-  /* Custom Alert */
   #customAlert {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: rgba(255,255,255,0.95);
-    backdrop-filter: blur(15px);
+    background: white;
     padding: 20px;
     border-radius: 20px;
     text-align: center;
     box-shadow: 0 10px 30px rgba(0,0,0,0.3);
     display: none;
-    z-index: 9999;
+    z-index: 10000;
   }
 
-  #customAlert img {
-    width: 90%;
-    max-width: 250px;
-    height: auto;
-    border-radius: 15px;
-    margin-top: 10px;
-  }
-
-  #sticker { display:none; }
+  #customAlert img { width: 100%; max-width: 200px; border-radius: 10px; margin-top: 10px; }
 </style>
 </head>
 
 <body>
 
-  <!-- Immagini iniziali -->
   <img src="quackandlolasleeping.webp" class="responsive">
 
-  <!-- Card centrale -->
   <div class="card">
     <div class="emoji">🦔❤️</div>
     <h2>🦔Riccia,<br> vuoi essere la mia Lola?</h2>
+    
     <div class="buttons">
       <button id="yes">Sì 💖</button>
       <button id="no">No 😣</button>
     </div>
+    
     <div class="hint">Indizio: Non sono una persona da “no” ✨</div>
   </div>
 
-  <!-- Immagine finale -->
   <img src="quackandlola.webp" class="responsive">
 
-  <!-- Custom alert -->
   <div id="customAlert">
     <p>Perfetto! Adesso possiamo darci un bacio eschimese!</p>
     <img src="quackkissing.webp">
   </div>
 
-  <!-- Suoni -->
   <audio id="hoverSound" src="https://assets.mixkit.co/sfx/preview/mixkit-cartoon-voice-laugh-343.mp3"></audio>
   <audio id="yesSound" src="https://assets.mixkit.co/sfx/preview/mixkit-achievement-bell-600.mp3"></audio>
 
@@ -201,46 +170,57 @@ const hoverSound = document.getElementById("hoverSound");
 const yesSound = document.getElementById("yesSound");
 const customAlert = document.getElementById("customAlert");
 
+// Funzione per spostare il tasto No
 noBtn.addEventListener("mouseenter", () => {
+  // 1. Riproduci suono
   hoverSound.currentTime = 0;
   hoverSound.play();
+
+  // 2. Fondamentale: imposta position absolute per permettere il movimento
+  noBtn.style.position = "absolute";
+
+  // 3. Calcola i limiti della card (così non esce fuori dal box bianco)
   const cardRect = card.getBoundingClientRect();
   const btnRect = noBtn.getBoundingClientRect();
-  const maxX = cardRect.width - btnRect.width - 10;
-  const maxY = cardRect.height - btnRect.height - 10;
-  noBtn.style.left = Math.random() * maxX + "px";
-  noBtn.style.top = Math.random() * maxY + "px";
+
+  // Calcoliamo le posizioni massime (togliendo un po' di margine per sicurezza)
+  const maxX = cardRect.width - btnRect.width - 20;
+  const maxY = cardRect.height - btnRect.height - 20;
+
+  // Genera coordinate casuali
+  const randomX = Math.floor(Math.random() * maxX);
+  const randomY = Math.floor(Math.random() * maxY);
+
+  // Applica le nuove coordinate
+  noBtn.style.left = randomX + "px";
+  noBtn.style.top = randomY + "px";
 });
 
+// Click sul Sì
 yesBtn.addEventListener("click", () => {
   yesSound.play();
-  confetti({ particleCount: 260, spread: 120, origin: { y: 0.65 }});
+  confetti({ particleCount: 260, spread: 120, origin: { y: 0.6 }});
 
-  // Mostra custom alert per 2 secondi
   customAlert.style.display = "block";
-  customAlert.style.opacity = 0;
-  customAlert.style.transition = "opacity 0.3s ease";
-  setTimeout(() => customAlert.style.opacity = 1, 50);
-
   setTimeout(() => {
-    customAlert.style.opacity = 0;
-    setTimeout(() => customAlert.style.display = "none", 300);
-  }, 2000); // 2 secondi
+    customAlert.style.display = "none";
+  }, 3000);
 });
 
+// Cuoricini di sfondo
 function createHeart() {
   const heart = document.createElement("div");
   heart.className = "heart";
-  heart.innerHTML = Math.random() > 0.5 ? "❤️" : "💗";
+  heart.innerHTML = "❤️";
   heart.style.left = Math.random() * 100 + "vw";
-  heart.style.fontSize = Math.random() * 22 + 14 + "px";
-  heart.style.animationDuration = Math.random() * 3 + 4 + "s";
-  heart.style.opacity = Math.random() * 0.5 + 0.4;
+  heart.style.fontSize = Math.random() * 20 + 10 + "px";
+  heart.style.animationDuration = Math.random() * 3 + 2 + "s";
   document.body.appendChild(heart);
-  setTimeout(() => heart.remove(), 8000);
+  setTimeout(() => heart.remove(), 5000);
 }
 
-setInterval(createHeart, 380);
+setInterval(createHeart, 400);
 </script>
+
 </body>
 </html>
